posiGen_FullsendBox/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Add_to_Next_Payout_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Next Payout Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allows_for_Multiple_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allows for Multiple Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ambassador Campaign</label>
        <referenceTo>Ambassador__Ambassador_Campaign__c</referenceTo>
        <relationshipLabel>Connected Salesforce Campaign</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountPerReferree__c</fullName>
        <formula>EarnedAmount__c /  CountOfReferrees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Per Referree</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Out_For_Each_Referee__c</fullName>
        <label>Amount Paid Out For Each Referee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAC_Appointment__c</fullName>
        <formula>BudgetedCost /  NumberOfConvertedLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAC Appointment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAC_Lead__c</fullName>
        <formula>BudgetedCost /  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAC Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAC_Sale__c</fullName>
        <formula>BudgetedCost /  NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAC Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_State__c</fullName>
        <label>Campaign State</label>
        <picklist>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostAsPercentOfRevenue__c</fullName>
        <formula>ActualCost /  PGRevenueCreatedToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost As Percent Of Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CountOfRefereesInProgress__c</fullName>
        <label># Of Referees In Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountOfRefereesLost__c</fullName>
        <label># Of Referees Lost</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountOfRefereesWon__c</fullName>
        <label># Of Referees Won</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountOfReferreesThatAreFullyBoarded__c</fullName>
        <label># Of Referrees That Are Fully Boarded</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountOfReferreesThatAreNowCustomers__c</fullName>
        <label># Of Referrees That Are Now Customers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountOfReferreesThatSignedAContract__c</fullName>
        <description>Referree/Campaign Member where Contract Signed Date Is Not Null</description>
        <label># Of Referrees That Signed A Contract</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountOfReferrees__c</fullName>
        <label>Count Of Referrees</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deferment_Incentive_Months__c</fullName>
        <inlineHelpText>Months to Delay Payment to Incent People to Buy.</inlineHelpText>
        <label>Deferment Incentive (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EarnedAmount__c</fullName>
        <label>Earned Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feedback_form_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Complete feedback form for event (See link in help text)</description>
        <inlineHelpText>https://docs.google.com/forms/d/1VZE1qvCY1SuacoJOkODZb3tF6_k6xVXjAIno9RL76kQ/viewform</inlineHelpText>
        <label>Feedback form Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Import_Process_Referree_Account__c</fullName>
        <description>only used in the import workflow, official record is the Campaign Member</description>
        <inlineHelpText>only used in the import workflow, official record is the Campaign Member</inlineHelpText>
        <label>For Import Process Referree Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_DatePaidPreRMS__c</fullName>
        <description>Date Paid from the Excel Referral Tracker pre-SF implementation of RMS</description>
        <inlineHelpText>Date Paid from the Excel Referral Tracker pre-SF implementation of RMS</inlineHelpText>
        <label>Import_DatePaidPreRMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <inlineHelpText>To track external source this same from</inlineHelpText>
        <label>Import ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_StatusPreRMS__c</fullName>
        <label>Import_StatusPreRMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Status_For_PG__c</fullName>
        <label>Import_Status For PG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lower_Monthly_Lease_Amount_Incentive__c</fullName>
        <label>Lower Monthly Lease Amount Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lower_Monthly_Lease_Duration_Months__c</fullName>
        <inlineHelpText>How many payments are discounts.</inlineHelpText>
        <label>Lower Monthly Lease Duration (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Needs_Payout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Payout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_Referral_Payments__c</fullName>
        <label># of Referral Payments</label>
        <summaryForeignKey>Referral_Payment__c.Referral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfReferreesInProgress__c</fullName>
        <formula>CountOfReferrees__c  -  NumberOfReferreesLost__c  -  NumberOfReferreesThatAreFullyBoarded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NumberOfReferreesInProgress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReferreesLost__c</fullName>
        <label>NumberOfReferreesLost</label>
        <summaryFilterItems>
            <field>CampaignMember.Opportunity_Stage__c</field>
            <operation>contains</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfReferreesThatAreFullyBoarded__c</fullName>
        <label>NumberOfReferreesThatAreFullyBoarded</label>
        <summaryFilterItems>
            <field>CampaignMember.Boarding_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfReferreesThatAreNowCustomers__c</fullName>
        <label>NumberOfReferreesThatAreNowCustomers</label>
        <summaryFilterItems>
            <field>CampaignMember.PVI_Install_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_for_Single_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity for Single Referral</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Single Referral Opps</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PGRevenueCreatedToDate__c</fullName>
        <label>PG Revenue Created To Date</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidCostPaidOutToDate__c</fullName>
        <label>Paid Cost Paid Out To Date</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_Referral_Amount_for_SRT__c</fullName>
        <formula>Parent.Amount_Paid_Out_For_Each_Referee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campaign Referral Amount for SRT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_When_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay When Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Payout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Payout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Amount_Paid__c</fullName>
        <label>Referral Amount Paid</label>
        <summarizedField>Referral_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Referral_Payment__c.Referral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referral_Earned__c</fullName>
        <formula>NumberOfReferreesThatAreNowCustomers__c =  CountOfReferrees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is only valid for Referrals that pay when all Referees are PiS.</inlineHelpText>
        <label>Referral Earned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferredDate__c</fullName>
        <label>Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_Address__c</fullName>
        <formula>Referrer__r.PersonContact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_City__c</fullName>
        <formula>Referrer__r.PersonContact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Is_Current__c</fullName>
        <formula>Referrer__r.Num_of_LD_Leases_Delinquent__c = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer_LD_Lease_Days_Delinquent__c</fullName>
        <formula>Referrer__r.Loan_Days_Past_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer LD Lease Days Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer_Past_Due_Amount__c</fullName>
        <formula>Referrer__r.LD_Lease_Amount_Past_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <formula>Referrer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_State__c</fullName>
        <formula>Referrer__r.PersonContact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals I Have Referred</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_ZIP__c</fullName>
        <formula>Referrer__r.PersonContact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenuePGEarned__c</fullName>
        <label>Revenue PG Earned</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SRT_Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity_for_Single_Referral__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Referee_Person_Account_Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRT Referee Person Account Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRT_Referee_Placed_In_Service_Date__c</fullName>
        <formula>Opportunity_for_Single_Referral__r.PVI_Placed_In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Referee Placed In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRT_Referee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRT Referee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (SRT_Referee__c)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRT_Referral_Amount__c</fullName>
        <label>SRT Referral Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SRT_Referral_Balance_Unpaid__c</fullName>
        <formula>SRT_Referral_Amount__c -  Referral_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Referral Balance Unpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SRT_Referral_Earned__c</fullName>
        <formula>NOT(ISBLANK(SRT_Referee_Placed_In_Service_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Referral Earned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Salesperson__c</fullName>
        <formula>if(isblank(Opportunity_for_Single_Referral__r.Salesperson__r.Username), Opportunity_for_Single_Referral__r.Owner.Username ,Opportunity_for_Single_Referral__r.Salesperson__r.Username)</formula>
        <label>SRT Salesperson</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_of_Appointments__c</fullName>
        <description>Target # of Appointments for the event</description>
        <inlineHelpText>Target # of Appointments for the event</inlineHelpText>
        <label>Target # of Appointments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WinRate__c</fullName>
        <formula>NumberOfLeads /  HierarchyNumberOfWonOpportunities</formula>
        <label>Win Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Win_Rate__c</fullName>
        <formula>CountOfReferreesThatAreFullyBoarded__c  /  CountOfReferrees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>All_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>NOLA</value>
        </filters>
        <label>Pontchartrain</label>
    </listViews>
    <listViews>
        <fullName>CT_Events_Campaign_2016</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_State__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <label>CT Events Campaign 2016</label>
    </listViews>
    <listViews>
        <fullName>CT_PPC</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>CT PPC</label>
    </listViews>
    <listViews>
        <fullName>Empire_Events_2015</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Empire Parent Campaigns 2015</value>
        </filters>
        <label>Empire Events Campaign 2015</label>
    </listViews>
    <listViews>
        <fullName>Empire_Parent_Campaigns_2016</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Empire Parent Campaigns 2016</value>
        </filters>
        <label>Empire Parent Campaigns 2016</label>
    </listViews>
    <listViews>
        <fullName>February_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_State__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2015</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>2/28/2015</value>
        </filters>
        <label>February Campaigns</label>
    </listViews>
    <listViews>
        <fullName>January_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Campaign_State__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>lessOrEqual</operation>
            <value>1/31/2015</value>
        </filters>
        <label>January Campaigns</label>
    </listViews>
    <listViews>
        <fullName>January_NY_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2015</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>3/1/2015</value>
        </filters>
        <filters>
            <field>Campaign_State__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <label>January NY Events</label>
    </listViews>
    <listViews>
        <fullName>March_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2015</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2015</value>
        </filters>
        <filters>
            <field>Campaign_State__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <label>March Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>CaseSafeID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.General</value>
        </filters>
        <label>Marketing Campaigns</label>
    </listViews>
    <listViews>
        <fullName>New_Orleans_Events_Campaign_2011_2015</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_State__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <label>New Orleans Events Campaign 2011-2015</label>
    </listViews>
    <listViews>
        <fullName>Past_Due_Customers_With_Referral_Credit</fullName>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Add_to_Next_Payout_Batch__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Referrer__c</columns>
        <columns>Referrer_Address__c</columns>
        <columns>Referrer_City__c</columns>
        <columns>SRT_Referral_Balance_Unpaid__c</columns>
        <columns>SRT_Referral_Amount__c</columns>
        <columns>Referrer_Past_Due_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Referral</value>
        </filters>
        <filters>
            <field>SRT_Referral_Earned__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Referrer_Is_Current__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SRT_Referral_Balance_Unpaid__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Past Due Customers With Referral Credit</label>
    </listViews>
    <listViews>
        <fullName>Referrals</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Referrer__c</columns>
        <columns>Referrer_Past_Due_Amount__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Referrer_Address__c</columns>
        <columns>Referrer_City__c</columns>
        <columns>SRT_Referral_Amount__c</columns>
        <columns>Referral_Amount_Paid__c</columns>
        <columns>SRT_Referral_Balance_Unpaid__c</columns>
        <columns>Add_to_Next_Payout_Batch__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Referral</value>
        </filters>
        <label>Referrals - All</label>
    </listViews>
    <listViews>
        <fullName>Referrals_Marked_Add_to_Next_Payout_Batc</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Referrer__c</columns>
        <columns>SRT_Referral_Earned__c</columns>
        <columns>Referrer_Past_Due_Amount__c</columns>
        <columns>Referrer_Address__c</columns>
        <columns>Referrer_City__c</columns>
        <columns>Referrer_State__c</columns>
        <columns>SRT_Referral_Amount__c</columns>
        <columns>Referral_Amount_Paid__c</columns>
        <columns>SRT_Referral_Balance_Unpaid__c</columns>
        <columns>Notes__c</columns>
        <columns>Add_to_Next_Payout_Batch__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Referral</value>
        </filters>
        <filters>
            <field>Add_to_Next_Payout_Batch__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Referrals Marked Add to Next Payout Batc</label>
    </listViews>
    <listViews>
        <fullName>Referrals_Unpaid_possibly_not_Pis</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Referrer__c</columns>
        <columns>SRT_Opportunity_Stage__c</columns>
        <columns>Referrer_Past_Due_Amount__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>SRT_Referral_Earned__c</columns>
        <columns>Referrer_Address__c</columns>
        <columns>Referrer_City__c</columns>
        <columns>Num_of_Referral_Payments__c</columns>
        <columns>SRT_Referral_Amount__c</columns>
        <columns>Referral_Amount_Paid__c</columns>
        <columns>SRT_Referral_Balance_Unpaid__c</columns>
        <columns>Add_to_Next_Payout_Batch__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Referral</value>
        </filters>
        <filters>
            <field>SRT_Referral_Balance_Unpaid__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SRT_Opportunity_Stage__c</field>
            <operation>equals</operation>
            <value>,Contracts Submitted to DC,Feasibility Analysis,Release to Installer</value>
        </filters>
        <label>Referrals - Unpaid (possibly not PiS)</label>
    </listViews>
    <recordTypes>
        <fullName>Event_Campaign</fullName>
        <active>true</active>
        <description>Campaigns around events.</description>
        <label>Event Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Campaign</fullName>
        <active>true</active>
        <description>Marketing campaigns.</description>
        <label>Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral</fullName>
        <active>true</active>
        <description>one of these for any given ‘event’ to tie it to the Campaign and track earned vs paid</description>
        <label>Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral_Campaign</fullName>
        <active>true</active>
        <description>Referral campaign record type.</description>
        <label>Referral Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral_Programs</fullName>
        <active>true</active>
        <description>one entry per program w/start/end date, rules, etc</description>
        <label>Referral Programs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Telemarketing_Campaign</fullName>
        <active>true</active>
        <description>Record type for a telemarketing campaign.</description>
        <label>Telemarketing Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Referral_Past_Due_Restricted</fullName>
        <active>false</active>
        <description>Referral can&apos;t be paid out if referrer is past due.</description>
        <errorConditionFormula>AND(Referrer_Past_Due_Amount__c  &gt; 0, Add_to_Next_Payout_Batch__c  = TRUE)</errorConditionFormula>
        <errorDisplayField>Add_to_Next_Payout_Batch__c</errorDisplayField>
        <errorMessage>You can not pay referrers who are past due!</errorMessage>
    </validationRules>
</CustomObject>